[package]
name = "helm-engine-wasm"
description = "Embedded Helm v4 template engine — Go→wasip1 module hosted via wasmtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# `precompile` (default on): build.rs AOT-compiles helm-engine.wasm
# to a `.cwasm` deserialized at runtime. Instant cold start, ~3x
# binary size. With it OFF, the source `.wasm` is embedded and
# wasmtime JIT-compiles at first call — meaningful binary-size win
# at the cost of ~5–10 s first-render. Off for the `akua-napi` npm
# distribution; on for `akua-cli`'s single-binary release.
[features]
default = ["precompile"]
precompile = []

[build-dependencies]
engine-host-wasm = { path = "../engine-host-wasm" }

[dependencies]
engine-host-wasm = { path = "../engine-host-wasm" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
