[package]
name = "kustomize-engine-wasm"
description = "Embedded kustomize engine — Go→wasip1 module hosted via wasmtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# `precompile` (default on): AOT-compile to `.cwasm`. With it OFF,
# the source `.wasm` is embedded and JIT'd at first call — used by
# `akua-napi`'s npm distribution to keep binary size manageable.
[features]
default = ["precompile"]
precompile = []

[build-dependencies]
engine-host-wasm = { path = "../engine-host-wasm" }

[dependencies]
engine-host-wasm = { path = "../engine-host-wasm" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
