[package]
name = "source-hash"
description = "Stable content hash of source trees. Used by `task build:render-worker` (producer) and akua-cli's build.rs (consumer) to verify host/worker lockstep."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "source-hash"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
